# ie-fiesta

./: .gitattributes  .gitignore  Makefile  README.md  main.py  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
assets/coco/: instances.json
assets/coco/multiple-set/: result.json
assets/coco/single-set/: result.json
assets/yolo/multiple-set/labels/: 295818bf-1-FA-100.0.1_BASEMENT_0_-NORTH_FIRE_ALARM_PLAN.txt  411244e6-0-FA-001_FIRE_ALARM_COVER_SHEET.txt  83a52356-3-FA-100.1.1_BASEMENT_1_-NORTH_FIRE_ALARM_PLAN.txt  a3fe1c56-2-FA-100.0.2_BASEMENT_0_-SOUTH_FIRE_ALARM_PLAN.txt  bf8fb1d5-4-FA-100.1.2_BASEMENT_1_-SOUTH_FIRE_ALARM_PLAN.txt  c23ebc75-2-page.txt  c9d7484d-3-page.txt
assets/yolo/single-set/: classes.txt  notes.json
assets/yolo/single-set/labels/: 8899e470-4-page.txt  d7e79e7b-1-page.txt
mydata/: label_studio.sqlite3
src/: dataset.py  helpers.py  infer.py  main.py  models.py  pdf_to_img.py  title_text_extraction_code.py  utils.py
src/scripts/: pdf_to_img.py
