[project]
name = "ie-fiesta"
version = "0.1.0"
description = "A prototype for extracting information from construction documents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.3.0",
    "pycocotools>=2.0.10",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.2",
    "tesseract>=0.1.3",
    "timm>=1.0.20",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]
[tool.uv.extra-build-dependencies]
git = ["torch"]

